--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,9 @@ fabric.properties
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+SqliteDB.db
+SqliteDB.db
+.idea/workspace.xml
+.idea/dataSources.xml
+.idea/dataSources.local.xml
+SqliteDB.db
