--- a/.gitignore
+++ b/.gitignore
@@ -78,11 +78,32 @@ fabric.properties
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-SqliteDB.db
-SqliteDB.db
-.idea/workspace.xml
-.idea/dataSources.xml
-.idea/dataSources.local.xml
-SqliteDB.db
 !/SqliteDB.db
-!/.idea/
+**/.idea/workspace.xml
+**/.idea/tasks.xml
+
+SqliteDB.db
+
+# JIRA plugin
+atlassian-ide-plugin.xml
+
+# Cursive Clojure plugin
+.idea/replstate.xml
+
+# Editor-based Rest Client
+.idea/httpRequests
+
+modules.xml
+.idea/misc.xml
+
+# Sonarlint plugin
+.idea/**/sonarlint/
+
+# SonarQube Plugin
+.idea/**/sonarIssues.xml
+
+# Markdown Navigator plugin
+.idea/**/markdown-navigator.xml
+.idea/**/markdown-navigator/
+
+# End of https://www.gitignore.io/api/jetbrains
