--- a/.gitignore
+++ b/.gitignore
@@ -78,7 +78,6 @@ fabric.properties
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-!/SqliteDB.db
 **/.idea/workspace.xml
 **/.idea/tasks.xml
 
@@ -106,4 +105,5 @@ modules.xml
 .idea/**/markdown-navigator.xml
 .idea/**/markdown-navigator/
 
-# End of https://www.gitignore.io/api/jetbrains
+!/lib/sqlite-jdbc-3.30.1.jar
+!/lib/
